# FIIT_FA_SP

./: .gitignore
allocator/allocator_global_heap/include/: allocator_global_heap.h
allocator/allocator_global_heap/src/: allocator_global_heap.cpp
allocator/allocator_global_heap/tests/: allocator_global_heap_tests.cpp
associative_container/search_tree/binary_search_tree/AVL_tree/include/: AVL_tree.h
associative_container/search_tree/binary_search_tree/AVL_tree/tests/: AVL_tree_tests.cpp
associative_container/search_tree/binary_search_tree/include/: binary_search_tree.h
associative_container/search_tree/binary_search_tree/tests/: binary_search_tree_tests.cpp
associative_container/search_tree/indexing_tree/b_tree/: CMakeLists.txt
associative_container/search_tree/indexing_tree/b_tree/include/: b_tree.h
associative_container/search_tree/indexing_tree/b_tree/tests/: CMakeLists.txt  b_tree_tests.cpp
logger/client_logger/src/: client_logger.cpp  client_logger_builder.cpp
logger/client_logger/tests/: client_logger_tests.cpp  set.json
logger/server_logger/: CMakeLists.txt
logger/server_logger/include/: server_logger.h  server_logger_builder.h
logger/server_logger/src/: server_logger.cpp  server_logger_builder.cpp
logger/server_logger/tests/: CMakeLists.txt  server.cpp  server.h  server_logger_tests.cpp
